[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/bottomButtons.gd" type="Script" id=1]

[node name="bottomButtons" type="HBoxContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -90.0
alignment = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnBack" type="Button" parent="."]
margin_right = 357.0
margin_bottom = 90.0
size_flags_horizontal = 3
action_mode = 0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnReset" type="Button" parent="."]
margin_left = 361.0
margin_right = 718.0
margin_bottom = 90.0
size_flags_horizontal = 3
action_mode = 0
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnPlay" type="Button" parent="."]
margin_left = 722.0
margin_right = 1080.0
margin_bottom = 90.0
size_flags_horizontal = 3
action_mode = 0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="btnBack" to="." method="_on_btnBack_pressed"]
[connection signal="pressed" from="btnReset" to="." method="_on_btnReset_pressed"]
[connection signal="pressed" from="btnPlay" to="." method="_on_btnPlay_pressed"]
